tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__CompactOrisit-AAAAAAAAAAAAAAAAAAACIA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 544,
  "prerequisites": [
    95
  ],
  "properties": {
    "auto_claim": false,
    "desc": "It's a compressor but that doesn't mean it's compact...\n\nIt is highly recommended to get one of these electric compressors, as the efficiency in terms of coal/steam used to compress something is a lot better when using EU.\n\n[note]You can also consider using the steam multiblock instead if you want.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lCompact? Or is it?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    95
  ],
  "rewards": [],
  "tasks": []
}
