tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__CraftsmanUsedtoM-AAAAAAAAAAAAAAAAAAAHdw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1911,
  "prerequisites": [
    539,
    77
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you have an EBF you can make vanadiumsteel GT tools. With 192k durability they'll last you a long time.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lCraftsman Used to Mean Quality",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    539,
    77
  ],
  "rewards": [],
  "tasks": []
}
