tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__CuttingThingsApa-AAAAAAAAAAAAAAAAAAAAZg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 102,
  "prerequisites": [
    540
  ],
  "properties": {
    "auto_claim": false,
    "desc": "An absolutely mandatory machine to have. It will cut rods into bolts, plates into casings, logs into planks, and all of that will be done with the highest possible efficiency. Totally worth it!\n\nYou can use water, distilled water, or lubricant to run it. Use lubricant if possible, as it's the best.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lCutting Things Apart",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    540
  ],
  "rewards": [],
  "tasks": []
}
