tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__DusttoCrystals-AAAAAAAAAAAAAAAAAAADAw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 771,
  "prerequisites": [
    93
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Use the autoclave to crystallize your dust. You can also make Raw Carbon Fiber out of Carbon Dust, and do other things.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lDust to Crystals",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    93
  ],
  "rewards": [],
  "tasks": []
}
